18_reverse_str/grade.txt
Grading at Tue Aug  7 21:27:16 UTC 2018
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:7:12: error: ‘return’ with a value, in function returning void [-Werror]
     return EXIT_FAILURE;
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
